# soulchain-hermes

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  soulchain.config.example.json  soulchain.config.json
contracts/: deployment.json
contracts/artifacts/: SoulRegistry.json
contracts/src/: SoulRegistry.sol
dashboard/: index.html
deploy/: README.md  soulchain-interval.service  soulchain-on-write.service
scripts/: anchor.py  deploy.py
src/soulchain/: __init__.py  cli.py  core.py  crypto.py  storage.py
src/soulchain/modes/: __init__.py  interval.py  manual.py  on_write.py
